Fixed progress bar z-index

--- a/public/stylesheets/!style.css
+++ b/public/stylesheets/!style.css
@@ -172,6 +172,7 @@ button,
 
 .progress-dots {
   position: fixed;
+  z-index: 100;
   left: 0;
   right: 0;
   top: 12px;
