--- a/src/scss/progress.scss
+++ b/src/scss/progress.scss
@@ -4,6 +4,7 @@ $progress-dot-size: 23px;
 
 .progress-dots {
     position: fixed;
+    z-index: 100;
     left: 0;
     right: 0;
     top: 12px;
